--- a/src/css/Pick.css
+++ b/src/css/Pick.css
@@ -5,6 +5,7 @@
   background-color: rgba(0, 0, 0, 0.473);
   position: absolute;
   top: 0px;
+  animation: open 0.3s ease-in-out;
 }
 
 #pick-boxes {
@@ -46,4 +47,22 @@
   text-align: center;
   color: white;
   font-size: 1.3em;
+}
+
+@keyframes open {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes hide {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
