--- a/src/css/WinnerMenu.css
+++ b/src/css/WinnerMenu.css
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  animation: open 0.3s ease-in-out;
 }
 
 #picked-items {
