--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,6 +7,9 @@
 
 main {
   background: radial-gradient(50% 88.89% at 50% 50%, #6b0f7a 0%, #313131 100%);
-  max-height: 100vh;
+  min-height: 100vh;
+}
+
+#root {
   min-height: 100vh;
 }
