--- a/src/css/Pick.css
+++ b/src/css/Pick.css
@@ -1,10 +1,8 @@
 #picker-section {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   z-index: 3;
   background-color: rgba(0, 0, 0, 0.473);
-  position: absolute;
-  top: 0px;
   animation: open 0.3s ease-in-out;
 }
 
@@ -13,16 +11,17 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+  min-height: 100vh;
+  top: 0px;
 }
 
 #picker-section h1 {
   text-align: center;
   color: white;
-  margin-top: 30px;
   font-size: 3em;
+  padding-top: 20px;
 }
 
 .pick-box {
@@ -64,5 +63,21 @@
   }
   to {
     opacity: 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .pick-box svg {
+    height: 30vh;
+    flex-direction: column;
+  }
+
+  .pick-box {
+    margin-top: 10%;
+    margin-bottom: 10%;
+  }
+
+  #pick-boxes {
+    position: static;
   }
 }
