--- a/src/css/WinnerMenu.css
+++ b/src/css/WinnerMenu.css
@@ -1,11 +1,17 @@
 #winner-section {
   min-height: 100vh;
-  max-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   animation: open 0.3s ease-in-out;
+}
+
+.picked-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #picked-items {
@@ -48,4 +54,16 @@
 
 #winner-section button:hover {
   transform: scale(1.1);
+}
+
+@media only screen and (max-width: 900px) {
+  #picked-items {
+    flex-direction: column;
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
+
+  #winner-section button {
+    margin-bottom: 10%;
+  }
 }
